@@ -1,6 +1,7 @@
 
 version 0.5.1 (cvs)
-	
+
+	- support for sending legacy invitations via Place service
 	
 version 0.5.0 (2005-10-28)
 
